# papers

./: .gitignore  README.md  _typos.toml  download-100-pdf.py  main.py  parse-all-metadata.py  pyproject.toml  search-all.py  server.py
.github/workflows/: ci.yml
impl/: article.py  chunk.py  embed.py  metadata.py  mineru.py  pdf.py  search.py  task.py  upsert.py
impl/downloader/: __init__.py  sci_hub.py  wos.py
routes/: debug.py  job.py
utils/: clsprop.py  concurrency.py  config.py  http.py  rate_limit.py  ui.py
