[project]
name = "papers-downloader"
version = "0"
requires-python = ">=3.12"
dependencies = [
    "alive-progress~=3.3.0",
    "attrs~=25.4.0",
    "diskcache2~=1.0.0",
    "fake-useragent~=2.2.0",
    "fastapi~=0.119.0",
    "mistune~=3.1.0",
    "niquests~=3.15.0",
    "numpy~=2.3.0",
    "parsel~=1.10.0",
    "pydantic-settings~=2.11.0",
    "python-slugify~=8.0.4",
    "qdrant-client~=1.15.0",
    "rich~=14.2.0",
    "ruff~=0.14.0",
    "tenacity~=9.1.2",
    "uvicorn~=0.38.0",
    "uvicorn-hmr[all]~=0.1.0",
    "watchfiles~=1.1.0",
]

[tool.ruff]
preview = true
line-length = 200

[tool.ruff.lint]
extend-select = [
    "F",    # flake8
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle
    "UP",   # pyupgrade
    "TRY",  # tryceratops
    "RUF",  # ruff
    "FURB", # refurb
    "C4",   # flake8-comprehensions
    "ARG",  # flake8-unused-arguments
    "PIE",  # flake8-pie
    "PTH",  # flake8-use-pathlib
    "RSE",  # flake8-raise
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
]

[tool.m.aliases]
dev = "uvicorn-hmr server:app --reload"
fmt = { cmd = "ruff format && ruff check --fix --show-fixes", shell = true }
